# jtd-wasm

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  JTD_CODEGEN_SPEC.md  LICENSE  README.md  TODO.md  xmake.lua
.github/workflows/: ci.yml  release.yml  static.yml
examples/: README.md  index.html  nginx.conf.template
examples/01_simple_user/: schema.json
examples/01_simple_user/wasm/: Cargo.toml
examples/02_complex_event/: schema.json
examples/02_complex_event/wasm/src/: lib.rs
examples/e2e/: Dockerfile  index.html  run-e2e.sh  serve.mjs  test-wasm.mjs
jtd-codegen/: Cargo.toml
jtd-codegen/src/: ast.rs  compiler.rs  lib.rs
jtd-codegen/src/emit_js/: context.rs  emit.rs  mod.rs  nodes.rs  types.rs  writer.rs
jtd-codegen/src/emit_lua/: context.rs  emit.rs  mod.rs  writer.rs
jtd-codegen/src/emit_py/: context.rs  emit.rs  mod.rs  writer.rs
jtd-codegen/src/emit_rs/: context.rs  emit.rs  mod.rs  types.rs
jtd-codegen/tests/: lua_validation_suite.rs  py_validation_suite.rs  quickjs_validation_suite.rs  rs_validation_suite.rs  wasmtime_validation_suite.rs
jtd-wasm-validator/: Cargo.toml  build.rs  schema.json
jtd-wasm-validator/src/: lib.rs
scripts/: pre-commit
