[package]
name = "jtd-codegen"
version = "0.1.0"
edition = "2021"
description = "JTD (RFC 8927) schema compiler and code generator for JavaScript ESM and Rust"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
quickjs-rs = "0.5.2"
